--- a/htdocs/themes/custom/si_nestwatch/sass/components/_header.scss
+++ b/htdocs/themes/custom/si_nestwatch/sass/components/_header.scss
@@ -44,6 +44,9 @@
 		.text {
 			display: none;
 		}
+		.lines {
+			top: unset;
+		}
 	}
 	.sf-expanded {
 		.lines {
